--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,25 @@
 {
-    "name": "Cake Marketing",
-    "description": "Cake Marketing API",
+    "name": "phpfanatic/cakemarketing",
+    "description": "Cake Marketing API for CakePHP 3",
     "type": "library",
     "license": "MIT",
-    "keywords": ["cake marketing","cakephp"],
+    "homepage": "https://github.com/PHPfanatic/cakemarketing-CakePHP-3",
+    "keywords": ["php","cake marketing","cakephp"],
     "authors": [
         {
             "name": "Nick White",
             "email": "git@phpfanatic.com"
         }
     ],
-    "require": {},
+    "require": {
+    	"php": "^5.6|^7.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "5.5.*"
     },
     "autoload": {
         "psr-4": {
-            "phpfanatic\\": "src"
+            "phpfanatic\\cakemarketing\\": "src"
         }
     }
 }
