--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
     "name": "phpfanatic/cakemarketing",
-    "description": "Cake Marketing API for CakePHP 3",
-    "type": "cakephp-plugin",
+    "description": "Cake Marketing API",
+    "type": "library",
     "license": "MIT",
-    "homepage": "https://github.com/PHPfanatic/cakemarketing-CakePHP-3",
-    "keywords": ["php","cake marketing","cakephp","cakephp plugin"],
+    "homepage": "https://github.com/PHPfanatic/cakemarketing",
+    "keywords": ["php","cake marketing"],
     "authors": [
         {
             "name": "Nick White",
