--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "autoload": {
         "psr-4": {
-            "phpfanatic\\cakemarketing\\": "src"
+            "phpfanatic\\cakemarketing\\": "src/"
         }
     }
 }
